--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 body {
   background-color: #303437;
   text-align: center;
+  font-family: sans-serif;
 }
 
-p {
+p1 {
   color: #EBEBEB;
-  font-family: arial;
   width: 100%;
+  font-size: 30px;
 }
 
-#today {}
+p2 {
+  color: #EBEBEB;
+  width: 100%;
+  font-size: 40px;
+}
 
-#date {
-  font-size: 30px
+#quote {
+  font-style: italic;
 }
