--- a/style.css
+++ b/style.css
@@ -4,16 +4,13 @@ body {
   font-family: sans-serif;
 }
 
-p1 {
+p {
   color: #EBEBEB;
   width: 100%;
   font-size: 30px;
-}
-
-p2 {
-  color: #EBEBEB;
-  width: 100%;
-  font-size: 40px;
+  padding: 0px;
+  border: 0px;
+  vertical-align: top;
 }
 
 #quote {
