--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@ body {
   background-color: rgb(48,52,55);
   text-align: center;
   font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.middle {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 p {
@@ -10,7 +20,7 @@ p {
   font-size: 30px;
   padding: 0px;
   border: 0px;
-  vertical-align: top;
+  margin: auto;
 }
 
 #quote {
